# ece277final

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build.sh  install.sh  pybuild.sh  requirements.txt  setup.py
ece277_final.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
py_src/: __init__.py  cli.py  mnist_cpp_model.pyd  model.py  numpy_cli.py  numpy_test.py  requirements.in  requirements.txt  train.py
src/: CMakeLists.txt  cli.py  model.py
src/cuda_model/: CMakeLists.txt  mnist_cu_model.cu  mnist_model.cpp  mnist_model.h
src/cxx/: mnist_model.cpp
